# rdkitcffi

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  create_bindings.sh  install.sh
.github/workflows/: rdkit_cffi.yml  rdkit_cffi_macos.yml  rdkit_cffi_win.yml  rdkit_cffi_win_vs.yml  rust.yml  rust.yml.disabled
data/: ringtest.smi  test.sdf  test.smi  test_win.sdf
examples/: test.sdf
include/: README.md  cffiwrapper.h  wrapper.h
include/RDGeneral/: RDConfig.h  export.h  versions.cpp  versions.h
lib/rdkitcffi_linux/: README.md  README.txt  compile.sh  demo.c
src/: bindings.rs  examples.rs  json.rs  lib.rs
tests/: tests.rs
