[package]
description = "A rust wrapper for some RDKit cheminformatics functionality"
name = "rdkitcffi"
version = "0.2.1"
links = "rdkitcffi"
build = "build.rs"
edition = "2018"
exclude = [
    "src/main.rs",
]
repository = "https://github.com/chrissly31415/rdkitcffi"
license-file = "LICENSE"
keywords = ["RDKit", "cheminformatics","chemistry"]

[dependencies]
libc = "0.2.178"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
polars =  { version = "0.52.0", features = ["json"]}

[build-dependencies]
cc = { version = "1.2.51"}
bindgen = "0.72.1"

[dev-dependencies]
test-env-log = "0.2"

[package.metadata.cargo-test-env]
LD_LIBRARY_PATH = { value = "./rdkitcffi_linux/linux-64", relative = true }

